tests/poly_overload/decls/__snapshots__/jsfmt.spec.js.snap
exports[`test typescript-deferred.js 1`] = `
"interface Some<X> {}
interface Other<X> { x: X; }
interface None<Y> {}
interface Nada<Y> { y: Y }
interface A<X> {
  foo<Y>(s: Some<X>, e: None<Y>): A<Y>;
  foo<Y>(s: Some<X>, e: Nada<Y>): A<Y>;
  foo<Y>(s: Other<X>, e: None<Y>): A<Y>;
  foo<Y>(s: Other<X>, e: Nada<Y>): A<Y>;
}
interface B<X> extends A<X> {
  foo<Y>(s: Some<X>, e: None<Y>): B<Y>;
  foo<Y>(s: Some<X>, e: Nada<Y>): B<Y>;
  foo<Y>(s: Other<X>, e: None<Y>): B<Y>;
  foo<Y>(s: Other<X>, e: Nada<Y>): B<Y>;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1497
        fromString(\", \").join(path.map(print, \"params\")),
                         ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1497:26)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at genericPrintNoParens (/src/printer.js:1384:14)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
"
`;
